SONAR-2016 Sonar plugins and so extensions are not accessible from the Sonar Maven plugin